--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,7 @@ pipelines:
         artifacts:
           - application.tgz
     - step:
+        name: Deploy on Heroku
         caches:
           - maven
         script: # Modify the commands below to build your repository.
